Add identity management and update ID types to Guid
- Added `AuthController` and `StockSectorController` for authentication and stock sector management.
- Removed `WeatherForecastController` and its model.
- Updated `Finance.StockMarket.Api.csproj` for Swagger and identity references.
- Removed `weatherforecast` endpoint from `Finance.StockMarket.Api.http`.
- Added `ExceptionMiddleware` for global exception handling.
- Introduced `CustomValidationProblemDetails` for standardized validation errors.
- Updated `Program.cs` for middleware, Swagger, and CORS.
- Added JWT settings to `appsettings.json`.
- Introduced `IAuthService` and `IUserService` interfaces.
- Changed repository interfaces to use `Guid` instead of `int` for IDs.
- Updated command and query classes to use `Guid` for IDs.
- Added new authentication and user management models.
- Updated `BaseEntity` to use `Guid` for ID.
- Added role and user configurations for initial data seeding.
- Introduced `FinanceStockMarketIdentityDBContext` for identity data.
- Created `Finance.StockMarket.Identity` project for identity management.
- Added `IdentityServicesRegistration` for configuring identity services.
- Added initial identity migration files and model snapshot.
- Added `ApplicationUser` class with additional properties.
- Added `AuthService` and `UserService` implementations.
- Updated `StockSectorConfiguration` to use `Guid` for ID.
- Updated `Finance.StockMarket.Persistence.csproj` for EF Core tools.
- Added initial migration for `StockSectors`, `Stocks`, and `Investments`.
- Updated repository methods to use `Guid` for IDs.
- Added `Finance.StockMarket.Identity` project to solution.

--- a/Finance.StockMarket.Api/Finance.StockMarket.Api.csproj
+++ b/Finance.StockMarket.Api/Finance.StockMarket.Api.csproj
@@ -12,10 +12,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Finance.StockMarket.Application\Finance.StockMarket.Application.csproj" />
+    <ProjectReference Include="..\Finance.StockMarket.Identity\Finance.StockMarket.Identity.csproj" />
     <ProjectReference Include="..\Finance.StockMarket.Infrastructure\Finance.StockMarket.Infrastructure.csproj" />
     <ProjectReference Include="..\Finance.StockMarket.Persistence\Finance.StockMarket.Persistence.csproj" />
   </ItemGroup>
