--- a/Finance.StockMarket.Api/appsettings.json
+++ b/Finance.StockMarket.Api/appsettings.json
@@ -11,7 +11,13 @@
     "FromName": "SendGrid-FromName"
   },
   "ConnectionStrings": {
-    "FinanceStockDatabaseConnectionString": "Server=localhost;Database=FinanceStockDatabase;Integrated Security=true; TrustServerCertificate = True; MultipleActiveResultSets= True;Max Pool Size=200;"
+    "FinanceStockDatabaseConnectionString": "Server=localhost;Database=FinanceStockDatabase;Integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets= True;Max Pool Size=200;"
+  },
+  "JwtSettings": {
+    "Key": "your-very-long-secret-key-at-least-32-characters",
+    "Issuer": "FinanceStockMarket.Api",
+    "Audience": "FinanceStockMarketUser",
+    "DurationInMinutes": 15
   },
   "AllowedHosts": "*"
 }
