Code changes for adding below,
- Redis Cache
- Background Service
- Hangfire Jobs
- Update the Stock data in Redis and brodcast it to the resprctive cleint
- User can subscribe to multiple ticker and get the data on the UI

--- a/Finance.StockMarket.Api/appsettings.json
+++ b/Finance.StockMarket.Api/appsettings.json
@@ -11,7 +11,8 @@
     "FromName": "SendGrid-FromName"
   },
   "ConnectionStrings": {
-    "FinanceStockDatabaseConnectionString": "Server=localhost;Database=FinanceStockDatabase;Integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets= True;Max Pool Size=200;"
+    "FinanceStockDatabaseConnectionString": "Server=localhost;Database=FinanceStockDatabase;Integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets= True;Max Pool Size=200;",
+    "Redis": "localhost:6379"
   },
   "JwtSettings": {
     "Key": "your-very-long-secret-key-at-least-32-characters",
