--- a/Finance.StockMarket.Application/Finance.StockMarket.Application.csproj
+++ b/Finance.StockMarket.Application/Finance.StockMarket.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
+    <PackageReference Include="Microsoft.ML" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
