--- a/Finance.StockMarket.Infrastructure/Finance.StockMarket.Infrastructure.csproj
+++ b/Finance.StockMarket.Infrastructure/Finance.StockMarket.Infrastructure.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
+    <PackageReference Include="Microsoft.ML" Version="4.0.1" />
+    <PackageReference Include="Microsoft.ML.DataView" Version="4.0.1" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="4.0.1" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
