--- a/Finance.StockMarket.Api/Properties/launchSettings.json
+++ b/Finance.StockMarket.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7206;http://localhost:5059",
+      "applicationUrl": "https://0.0.0.0:7206;http://0.0.0.0:5059",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
